			   XPCE ChangeLog
			   ==============

VERSION 6.0.6, distributed with SWI-Prolog 5.0.6
================================================

* FIXED: X11 version: timers sometimes stopped spontaneously.

* ENHANCED: library(find_file).  New and more flexible file-browser.

* FIXED: interface to generate error(instantiation_error,_) exception on
  uninstantiated data rather than a type-error.

* ENHANCED: XPCE Inspector to show textual value of a string rather then
  the address of the text and numerical indication of flags.

* ADDED: `dialog<-border' to always return a size object.

* ADDED: `file_item <->exists', fixing browse mode in PceEmacs save_as and
  friends.

* FIXED: Explicit window placement in Windows version. 

* FIXED: avoid loosing a file-descriptor in prolog_xref.pl if a loaded
  file contains a syntax-error in the first term.  Affects PceEmacs in
  Prolog mode and the GUI-Tracer.

* FIXED: Added -fno-strict-aliasing to make XPCE compile correctly using
  GCC-3 (Lourens van der Meij).

* FIXED: `image_browser<-selected' from library(pce_image_browser).

* ADDED: Allow unbound value as default in default/3.

* ADDED: `path<-distance' to compute distance to a point or event.

* ADDED: `menu->insert_before' for easily adding menu items in the middle
  of existing menus.

* FIXED: `object <-get_hyper' got into a loop when accessing the hyper
  backwards.

* ADDED/MODIFIED: Instance variables that allow for @default, but not for
  @nil have initial value @default without explicit specification.
  Instance-variables that have an associated class-variable are now always
  initialised to @class_default, which is replaced by the value from the
  class-variable on first access.

* MODIFIED: class tab/tab_stack: nicer visualisation of top/hidden tab.

* ADDED: `colour<-hilite' and `colour<-reduce': argument to say how much.

* FIXED: `frame->set' on Windows to handle X and Y properly.  Reported by
  Ron Seljee.
